[package]
name = "matcha"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy-db = "1.5.3"
soulog = "1.2.1"
cranelift = "0.100.0"
flexar = "0.3.8"
cranelift-jit = "0.100.0"
cranelift-module = "0.100.0"
serde = "1.0.188"
bincode = "1.3.3"

[profile.dev.package."*"]
opt-level = 3